--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/process": "~2.3|~3.0|~4.0",
         "zendframework/zendservice-apple-apns": "^1.1.0",
         "zendframework/zendservice-google-gcm": "1.*",
-        "doctrine/inflector": "1.1"
+        "doctrine/inflector": "^1.1"
     },
     "require-dev": {
         "atoum/atoum": "dev-master"
