--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "symfony/options-resolver": "~2.3|~3.0|~4.0",
         "symfony/console": "~2.3|~3.0|~4.0",
         "symfony/process": "~2.3|~3.0|~4.0",
-        "zendframework/zendservice-apple-apns": "^1.1.0",
-        "zendframework/zendservice-google-gcm": "1.*",
+        "zendframework/zendservice-apple-apns": "~1.0",
+        "zendframework/zendservice-google-gcm": "~2.0",
         "doctrine/inflector": "^1.1"
     },
     "require-dev": {
