--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "notgosu/notification-pusher",
+    "name": "sly/notification-pusher",
     "description": "Standalone PHP library for easy devices notifications push.",
     "keywords": ["apple", "iphone", "apns", "android", "gcm", "notification", "message", "push", "pusher"],
     "homepage": "https://github.com/Ph3nol/NotificationPusher",
