--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "require": {
         "php": ">=5.5",
 
-        "symfony/options-resolver": "~2.3|~3.0|~4.0",
-        "symfony/console": "~2.3|~3.0|~4.0",
-        "symfony/process": "~2.3|~3.0|~4.0",
+        "symfony/options-resolver": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/console": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/process": "~2.3|~3.0|~4.0|~5.0",
         "zendframework/zendservice-apple-apns": "~1.0",
         "zendframework/zendservice-google-gcm": "~2.1.1",
         "doctrine/inflector": "^1.1",
